--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"react-google-charts": "^4.0.0",
 		"react-hook-form": "^4.9.3",
 		"react-icons": "^4.3.1",
+		"react-loading": "^2.0.3",
+		"react-lottie": "^1.2.3",
 		"react-notification-system": "^0.2.17",
 		"react-redux": "^7.2.0",
 		"react-router": "^5.1.2",
