--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
 	"scripts": {
 		"build": "yarn build:production",
 		"build:development": "env-cmd -f .env.development react-scripts build",
-		"build:production": "env-cmd -f .env.production react-scripts build",
+		"build:production": "env-cmd -f .env.development react-scripts build",
 		"build:staging": "env-cmd -f .env.staging react-scripts build",
 		"colors": "node src/lib/scripts/colors.js",
 		"cypress": "cypress open",
@@ -83,7 +83,7 @@
 		"serve": "serve -s build",
 		"start": "yarn start:development",
 		"start:development": "env-cmd -f .env.development react-scripts start",
-		"start:production": "env-cmd -f .env.production react-scripts start",
+		"start:production": "env-cmd -f .env.development react-scripts start",
 		"start:staging": "env-cmd -f .env.staging react-scripts start",
 		"test": "yarn test:staging",
 		"test:development": "env-cmd -f .env.production react-scripts test --env=jsdom",
