--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"date-fns": "^2.11.1",
 		"env-cmd": "^10.1.0",
 		"faker": "^4.1.0",
+		"findup-sync": "^0.1.2",
 		"history": "^4.10.1",
 		"moment": "^2.24.0",
 		"pretty-checkbox": "^3.0.3",
@@ -68,7 +69,7 @@
 		"stylelint-scss": "^3.1.3"
 	},
 	"scripts": {
-		"build": "yarn build:production",
+		"build": "npm build:production",
 		"build:development": "env-cmd -f .env.development react-scripts build",
 		"build:production": "env-cmd -f .env.development react-scripts build",
 		"build:staging": "env-cmd -f .env.staging react-scripts build",
@@ -81,7 +82,7 @@
 		"lint": "eslint src/",
 		"lint:fix": "eslint src/ --fix",
 		"serve": "serve -s build",
-		"start": "yarn start:development",
+		"start": "npm start:development",
 		"start:development": "env-cmd -f .env.development react-scripts start",
 		"start:production": "env-cmd -f .env.development react-scripts start",
 		"start:staging": "env-cmd -f .env.staging react-scripts start",
