--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
 		"stylelint-scss": "^3.1.3"
 	},
 	"scripts": {
-		"build": "npm build:production",
+		"build": "yarn build:production",
 		"build:development": "env-cmd -f .env.development react-scripts build",
 		"build:production": "env-cmd -f .env.development react-scripts build",
 		"build:staging": "env-cmd -f .env.staging react-scripts build",
@@ -82,7 +82,7 @@
 		"lint": "eslint src/",
 		"lint:fix": "eslint src/ --fix",
 		"serve": "serve -s build",
-		"start": "npm start:development",
+		"start": "yarn start:development",
 		"start:development": "env-cmd -f .env.development react-scripts start",
 		"start:production": "env-cmd -f .env.development react-scripts start",
 		"start:staging": "env-cmd -f .env.staging react-scripts start",
