--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_PATH=./src
-REACT_APP_NAME=Portal Modelo base
-REACT_APP_DESCRIPTION=Portal Modelo base
+REACT_APP_NAME=Clientes Modelo vencedor
+REACT_APP_DESCRIPTION=Clientes Modelo vencedor
 REACT_APP_SOURCE_URL=
