--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 REACT_APP_BASE_AUTH=https://id.sagasistemas.com.br/api/v1
-REACT_APP_APP_AUTH=modelo-base
+REACT_APP_APP_AUTH=Clientes Modelo vencedor
 REACT_APP_BASE_APP=http://localhost:4000/
