--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 		"classnames": "^2.2.6",
 		"date-fns": "^2.11.1",
 		"env-cmd": "^10.1.0",
+		"eslint-plugin-import": "2.22.1",
 		"faker": "^4.1.0",
 		"findup-sync": "^0.1.2",
 		"history": "^4.10.1",
+		"i": "^0.3.7",
 		"moment": "^2.24.0",
 		"pretty-checkbox": "^3.0.3",
 		"prop-types": "^15.7.2",
